<resources>
    <string name="app_name">BPM</string>
    <string name="mobile_oa">KSTAR</string>
    <string name="mobile_oa_system">KSTAR System</string>
    <string name="global_activity_title_default">aBzB Time Clock</string>
    <string name="global_login">Login</string>
    <string name="logout">exit Login</string>
    <string name="version_title">Current version</string>
    <string name="is_logout">Are you logged in</string>
    <string name="global_settings">Settings</string>
    <string name="global_menu">menu</string>
    <string name="global_ok">OK</string>
    <string name="global_cancel">Cancel</string>
    <string name="global_back">Back</string>
    <string name="global_exit">Exit</string>
    <string name="global_delete">Delete</string>
    <string name="global_all">ALL</string>
    <string name="global_move">Move</string>
    <string name="global_exit_app">Exit App?</string>
    <string name="global_logout_app">Logout App?</string>
    <string name="global_clock_in">Clock In</string>
    <string name="global_clock_out">Clock Out</string>
    <string name="global_take_photo">Photo Taken</string>
    <string name="global_times_up">Times Up</string>
    <string name="global_pick_from_gallery">Pick From Gallery</string>
    <string name="global_sdcard_not_please_from_photo">SDCard is available</string>
    <string name="global_photo_path_empty">SDCard not be read</string>
    <string name="global_gps_not_open">GPS do not work!</string>
    <string name="global_go_system_settings">Go settings</string>
    <string name="global_empno_empty">Employee Number is required.</string>
    <string name="global_password_empty">Password is required.</string>
    <string name="global_url_empty">URL is required.</string>
    <string name="global_remark_empty">Remark is required.</string>
    <string name="global_input_format_illgal">Input format illgal</string>
    <string name="global_network_error">Network Error</string>
    <string name="global_network_disconnected">Network Disconnected</string>
    <string name="please_contact">Please contact</string>
    <string name="global_getting_last_location">Getting the last location&#8230; Please wait&#8230;&#8230;&#8230;</string>
    <string name="global_prompt">Prompt</string>
    <string name="global_prompt_message">Loading&#8230;&#8230;&#8230;</string>
    <string name="global_year_time_format">-</string>
    <string name="global_month_time_format">-</string>
    <string name="global_day_time_format"></string>
    <string name="global_hour_time_format">:</string>
    <string name="global_minute_time_format">:</string>
    <string name="global_second_time_format"></string>
    <string name="global_none">----</string>
    <string name="global_error_reason">Reason:</string>
    <string name="global_http_header">http://</string>
    <string name="global_http_header_with_ssl">https://</string>
    <string name="global_retry">Please retry&#8230;&#8230;&#8230;</string>
    <string name="keyword_is_null">keyword is null</string>
    <string name="common">Common</string>
    <string name="more">More</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="detail">Detail</string>
    <string name="click_again_exit">Click again to exit!</string>
    <string name="system">System</string>
    <string name="custom">Custom</string>
    <string name="conference">Conference</string>
    <string name="remove">Remove</string>
    <string name="personal_office">Personal Office</string>
    <string name="service_support">Service Support</string>
    <string name="other">Other</string>
    <string name="seconds">Seconds</string>
    <string name="my_telephone">telephone</string>
    <string name="my_mobile">mobile</string>
    <string name="my_emails">email</string>
    <string name="my_address">address</string>
    <string name="global_login_success">Login Success</string>
    <string name="global_clock_success">Clock Success</string>
    <string name="global_add_new_status_success">Add New Status Success</string>
    <string name="global_edit_status_success">Edit Status Success</string>
    <string name="delete_success">Delete Success</string>
    <string name="edit_failed">Edit Failed</string>
    <string name="unnecessary_update">Unnecessary Update</string>
    <string name="cancle_update">Cancle Update</string>
    <string name="email_send_success">Email send success</string>
    <string name="add_task_success">Add task success</string>
    <string name="save_draft_success">Draft save success</string>
    <string name="evaluation_success">Evaluation success</string>
    <string name="evaluation_failed">Evaluation failed</string>
    <string name="email_send_failed">Email send failed</string>
    <string name="save_draft_failed">Draft save failed</string>
    <string name="global_login_failed">Login Failed</string>
    <string name="global_clock_failed">Clock Failed.</string>
    <string name="global_add_new_status_failed">Add New Status Failed</string>
    <string name="global_location_failed">Location Failed! Retrying&#8230;&#8230;&#8230;</string>
    <string name="global_create_file_failed">Create File Failed</string>
    <string name="global_no_data">No Data</string>
    <string name="global_no_permission">No Permission! Please choose another location.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="no_data">No Data</string>
    <string name="update_head_sculpture_success">Update head sculpture success</string>
    <string name="update_head_sculpture_failed">Update head sculpture failed</string>
    <string name="mobile_office_system">mobile office system</string>
    <string name="account_number">account</string>
    <string name="account_number_colon">account：</string>
    <string name="password">password</string>
    <string name="remember_account">remember account</string>
    <string name="open_vpn">open the vpn</string>
    <string name="forget_password">forget password</string>
    <string name="binding_way">Binding way</string>
    <string name="tv_binding_imei">Your IMEI number is not binding, please enter your mobile phone number for binding</string>
    <string name="enter_verification_code">enter the verification code to bind</string>
    <string name="binding_job_number">Your device is not binding, please enter your work number and select to receive verification code way binding</string>
    <string name="job_number">Job number</string>
    <string name="job_number_colon">Job number:</string>
    <string name="binding_job_no">Binding job number</string>
    <string name="receive_verification_code">Choose the way to receive verification code</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_number_colon">Phone number：</string>
    <string name="binding_user">Binding user</string>
    <string name="send_verification_code">Send</string>
    <string name="verification_code">Verification code</string>
    <string name="resend">Resend</string>
    <string name="confirm">Confirm</string>
    <string name="submit">Submit</string>
    <string name="user_login">Login</string>
    <string name="user_login_out">Login Out</string>
    <string name="email_address_invalid">Email address is not correct</string>
    <string name="search">Search</string>
    <string name="empty_list_msg">No Results</string>
    <string name="input_employee_number">input employee number</string>
    <string name="accept">Accept</string>
    <string name="to_be_accepted">To be accepted</string>
    <string name="have_been_accepted">Have been accepted</string>
    <string name="in_progress">In progress</string>
    <string name="complete">Complete</string>
    <string name="has_been_completed">Has been completed</string>
    <string name="termination">Termination</string>
    <string name="have_been_termination">Have been termination</string>
    <string name="begin">Begin</string>
    <string name="has_begun">Has begun</string>
    <string name="global_new">New</string>
    <string name="menu_workbench">Workbench</string>
    <string name="menu_my">My</string>
    <string name="my_workbench">My Workbench</string>
    <string name="work_area">Work Area</string>
    <string name="my_tasks">My Tasks</string>
    <string name="my_process">My Process</string>
    <string name="my_calendar">My Calendar</string>
    <string name="my_mails">My Mails</string>
    <string name="my_address_book">My Address Book</string>
    <string name="hr_assistant">Lively consultation</string>
    <string name="personal_details">Personal details</string>
    <string name="reimbursement">Reimbursement</string>
    <string name="my_reimbursement">My Expense Reimbursement</string>
    <string name="consume_query">Consumer inquiries</string>
    <string name="person_consume_query">Person Consume Query</string>
    <string name="erasure_phone_data">Erasure Phone Data</string>
    <string name="company_news">Company News</string>
    <string name="process_portal">Application</string>
    <string name="application">Application</string>
    <string name="applications_collect">Applications Collect</string>
    <string name="hr_service">HR Service</string>
    <string name="logis_service">Logistics service</string>
    <string name="module_responsible">Module Leader</string>
    <string name="it_service">IT Service</string>
    <string name="feedback">Feedback</string>
    <string name="troubleshooting">Troubleshooting</string>
    <string name="add_feedback">Add feedback</string>
    <string name="feedback_info">Feedback info</string>
    <string name="use_feedback">Software Use Feedback</string>
    <string name="ask_for_leave">Ask for leave</string>
    <string name="overtime_application">Overtime application</string>
    <string name="travel_request">Travel request</string>
    <string name="access_request">Access Request</string>
    <string name="benefit_life">Benefit life</string>
    <string name="dormitory_repair">Dormitory repair</string>
    <string name="dormitory_maintenance">Dormitory maintenance</string>
    <string name="bus_timetable">Bus timetable</string>
    <string name="granducato_hotel">Granducato hotel</string>
    <string name="sports">Sports</string>
    <string name="beer_and_skittles">Beer and skittles</string>
    <string name="network_correlation">Network correlation</string>
    <string name="safety_management">Safety management</string>
    <string name="certificate_manage">Certificate management</string>
    <string name="leave_application">Leave application</string>
    <string name="oia_forum">OIA Forum</string>
    <string name="service">Service</string>
    <string name="help">Help</string>
    <string name="suggestion_feedback">Suggestion Feedback</string>
    <string name="personal_center">Personal Center</string>
    <string name="change_avatar">Change avatar</string>
    <string name="write_email">Write an e-mail</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="subject_not_read">Subject not read</string>
    <string name="not_save_drafts">Not save drafts</string>
    <string name="save_drafts">Save drafts</string>
    <string name="keyword_history">Keyword history</string>
    <string name="schedule">schedule</string>
    <string name="year">Year</string>
    <string name="day">Day</string>
    <string name="today">today</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thur</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="month">Month</string>
    <string name="time">Time</string>
    <string name="branch">Branch</string>
    <string name="second">Second</string>
</resources>