<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color" >

    <include
        android:id="@+id/top_title"
        layout="@layout/public_email_title" />
<!-- 2015/08/05 gone -->
    <RelativeLayout
        android:id="@+id/ll_search"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@id/top_title"
        android:background="@drawable/search_bar_bg"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone"
        >

        <com.k2.mobile.app.view.widget.ClearEditText
            android:id="@+id/cet_filter"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="70dp"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:background="@drawable/search_bar_edit_selector"
            android:drawableLeft="@drawable/search_bar_icon_normal"
            android:hint="@string/keyword_history"
            android:singleLine="true"
            android:layout_centerVertical="true"
            android:textSize="15.0dip" />

        <TextView
            android:id="@+id/tv_search"
            android:layout_width="50dp"
            android:layout_height="28dp"
            android:layout_margin="10dp"
            android:background="@drawable/background_textview_frame"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/search" />
    </RelativeLayout>

    <com.k2.mobile.app.view.widget.XListView
        android:id="@+id/lv_show"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ll_bottom"
        android:layout_below="@id/ll_search"
        android:divider="@null"
        android:scrollbars="none" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.33dp"
        android:layout_above="@+id/ll_bottom"
        android:background="@color/main_body_bg" />

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="fill_parent"
        android:layout_height="53dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tc_write_email"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/write_email"
            android:textColor="#00925f"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tv_read"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/mark_as_read"
            android:textColor="@drawable/email_bottom_selector"
            android:textSize="16dp"
            android:visibility="gone" />
        
        <TextView
            android:id="@+id/tv_no_read"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/subject_not_read"
            android:textColor="@drawable/email_bottom_selector"
            android:textSize="16dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_del"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/global_delete"
            android:textColor="@drawable/email_bottom_selector"
            android:textSize="16dp"
            android:visibility="gone" />
    </LinearLayout>

</RelativeLayout>