<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/margin_padding_height_20"
    android:paddingRight="@dimen/margin_padding_height_20"
    android:gravity="center_horizontal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >
        <Button 
            android:id="@+id/btn_not_save_drafts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg_selector"
            android:text="@string/not_save_drafts"
            android:textSize="@dimen/text_size_16" />
        <Button 
            android:id="@+id/btn_save_drafts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg_selector"
            android:layout_marginTop="@dimen/margin_padding_height_5"
            android:text="@string/save_drafts"
            android:textSize="@dimen/text_size_16" />
        <Button 
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg_selector"
            android:layout_marginTop="@dimen/margin_padding_height_5"
            android:layout_marginBottom="@dimen/margin_padding_height_16"
            android:text="@string/global_cancel"
            android:textSize="@dimen/text_size_16" />
    </LinearLayout>

</RelativeLayout>